--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 /autom4te.cache/
 
-/bin/jemalloc.sh
+# /bin/jemalloc.sh
 
 /config.stamp
 /config.log
@@ -19,28 +19,28 @@
 
 /Makefile
 
-/include/jemalloc/internal/jemalloc_internal.h
-/include/jemalloc/internal/jemalloc_internal_defs.h
-/include/jemalloc/internal/private_namespace.h
-/include/jemalloc/internal/private_unnamespace.h
-/include/jemalloc/internal/public_namespace.h
-/include/jemalloc/internal/public_symbols.txt
-/include/jemalloc/internal/public_unnamespace.h
-/include/jemalloc/internal/size_classes.h
-/include/jemalloc/jemalloc.h
-/include/jemalloc/jemalloc_defs.h
-/include/jemalloc/jemalloc_macros.h
-/include/jemalloc/jemalloc_mangle.h
-/include/jemalloc/jemalloc_mangle_jet.h
-/include/jemalloc/jemalloc_protos.h
-/include/jemalloc/jemalloc_protos_jet.h
-/include/jemalloc/jemalloc_rename.h
+# /include/jemalloc/internal/jemalloc_internal.h
+# /include/jemalloc/internal/jemalloc_internal_defs.h
+# /include/jemalloc/internal/private_namespace.h
+# /include/jemalloc/internal/private_unnamespace.h
+# /include/jemalloc/internal/public_namespace.h
+# /include/jemalloc/internal/public_symbols.txt
+# /include/jemalloc/internal/public_unnamespace.h
+# /include/jemalloc/internal/size_classes.h
+# /include/jemalloc/jemalloc.h
+# /include/jemalloc/jemalloc_defs.h
+# /include/jemalloc/jemalloc_macros.h
+# /include/jemalloc/jemalloc_mangle.h
+# /include/jemalloc/jemalloc_mangle_jet.h
+# /include/jemalloc/jemalloc_protos.h
+# /include/jemalloc/jemalloc_protos_jet.h
+# /include/jemalloc/jemalloc_rename.h
 
 /src/*.[od]
 /src/*.gcda
 /src/*.gcno
 
-/test/test.sh
+# /test/test.sh
 test/include/test/jemalloc_test.h
 test/include/test/jemalloc_test_defs.h
 
