--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,122 @@ test/include/test/jemalloc_test_defs.h
 /test/unit/*.out
 
 /VERSION
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Editors leave these lying around
+\#*\#
+.#*
+*~
+*.swp
+
+# For Visual Studio files on Windows
+*.user
+*.ncb
+*.aps
+*.idb
+*.pdb
+*.dep
+*.obj
+*.ilk
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.rsp
+*.pgc
+*.pgd
+*.meta
+*.manifest
+*.intermediate.manifest
+*.suo
+*.sdf
+*.opensdf
+*.layout
+*.depend
+*.sln.old
+*.sln_old
+# *.vcxproj.user
+/Debug/
+/Release/
+/x86-Debug/
+/x86-Release/
+/x64-Debug/
+/x64-Release/
+!/deps/
+
+# For Visual Studio Update File
+UpgradeLog.XML
+UpgradeLog.htm
+/Backup/
+
+# For log file
+*.log
+
+# For Intel C++ Compiler Log File & Project File
+IcUpdateLog.htm
+*.icproj
+
+# For AStyle backup file
+*.orig
+
+# For Code::Blocks backup file
+*.sav
+
+# For Sublime Text 2 dump file
+*.dump
+
+# tmp and obj files
+/obj/
+/gen/
+/tmp/
+/temp/
+
+# For Visual Studio 2013 temp files on Windows
+*.tlog
+
+# For Visual Studio C# files on Windows
+*.cache
+
+# Zip or Rar files
+*.zip
+*.rar
+
+# Some files on Windows
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Other files
+/.metadata
+/169.254.0.1
+/ipch/
+/cmake/
+/Simulator/
+/Simulator-Coverage/
+/Simulator-Profile/
+/Device-Debug/
+/Device-Coverage/
+/Device-Profile/
+/Device-Release/
