--- a/projects/jemalloc_test/proj.win32/vc2008/jemalloc_test.vcproj
+++ b/projects/jemalloc_test/proj.win32/vc2008/jemalloc_test.vcproj
@@ -43,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\..\..\src;..\..\..\..\src\jemalloc;..\..\..\..\include;..\..\..\..\include\jemalloc;..\..\..\..\test;..\..\..\..\deps;&quot;$(SolutionDir)src&quot;;&quot;$(SolutionDir)include&quot;;.\src;.\include;.\include\jemalloc;.\test;.\deps;&quot;$(ProjectDir)src&quot;;&quot;$(ProjectDir)include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;USE_STATIC;GPL_DECLARE_STATIC"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;USE_STATIC;GPL_DECLARE_STATIC;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -120,7 +120,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\..\..\..\src;..\..\..\..\src\jemalloc;..\..\..\..\include;..\..\..\..\include\jemalloc;..\..\..\..\test;..\..\..\..\deps;&quot;$(SolutionDir)src&quot;;&quot;$(SolutionDir)include&quot;;.\src;.\include;.\include\jemalloc;.\test;.\deps;&quot;$(ProjectDir)src&quot;;&quot;$(ProjectDir)include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;USE_STATIC;GPL_DECLARE_STATIC"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;USE_STATIC;GPL_DECLARE_STATIC;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -184,6 +184,42 @@
 			</File>
 			<File
 				RelativePath="..\..\..\..\tests\jemalloc_test\src\jemalloc_test.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\jemalloc_tester.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\jemalloc_tester.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\lang_def.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\lang_def.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\malloc_tester.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\malloc_tester.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\mempool_tester.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\mempool_tester.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\tests\jemalloc_test\src\stop_watch.h"
 				>
 			</File>
 			<File
