Fixed PRIXPTR macro reference in <inttypes.h>; Change the libjemalloc.lib filename to like libjemalloc_x86_Release.lib, update it in VS 2008, 2010 and 2013 both.
Signed-off-by: shines77 <gz_shines@msn.com>

--- a/.gitignore
+++ b/.gitignore
@@ -121,8 +121,6 @@ test/include/test/jemalloc_test_defs.h
 *.suo
 *.sdf
 *.opensdf
-*.layout
-*.depend
 *.sln.old
 *.sln_old
 # *.vcxproj.user
@@ -141,6 +139,10 @@ UpgradeLog.htm
 
 # For log file
 *.log
+
+# For CodeBlocks project files
+*.layout
+*.depend
 
 # For text file
 !ReadMe.txt
