--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,8 @@
 /src/*.gcno
 
 # /test/test.sh
-test/include/test/jemalloc_test.h
-test/include/test/jemalloc_test_defs.h
+# test/include/test/jemalloc_test.h
+# test/include/test/jemalloc_test_defs.h
 
 /test/integration/[A-Za-z]*
 !/test/integration/[A-Za-z]*.*
