--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 
 /lib/
 
-/Makefile
+# /Makefile
 
 # /include/jemalloc/internal/jemalloc_internal.h
 # /include/jemalloc/internal/jemalloc_internal_defs.h
